[project]
name = "oakberry-event-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "gradio>=6.0.2",
    "ipykernel>=7.1.0",
    "openai-agents>=0.6.1",
    "python-dotenv>=1.2.1",
]
